# fuller

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  cspell.json  example-requirements.in  example-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  tf2_comparison.ipynb  tf_ugrade_report.txt
.cspell/: custom-dictionary.txt
.github/workflows/: release.yml
docs/: conf.py  fuller_metrics.rst  fuller_utils.rst  index.rst  inst_start.rst
docs/doctrees/: environment.pickle  fuller_generator.doctree  fuller_metrics.doctree  fuller_mrfRec.doctree  fuller_utils.doctree  generator.doctree  index.doctree  inst_start.doctree
docs/html/: .buildinfo  fuller_generator.html  fuller_metrics.html  fuller_mrfRec.html  fuller_utils.html  generator.html  genindex.html  index.html  inst_start.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: fuller_generator.rst.txt  fuller_mrfRec.rst.txt
examples/: 01_Hexagonal_tiling.ipynb  02_Brillouin_zoning.ipynb  03_preprocessing.ipynb  04_mpes_reconstruction_mrf.ipynb  05_synthetic_data_and_initial_conditions.ipynb  interpolation_cutter.ipynb  synthetic_mpes_data_generation_I (from calculation).ipynb  synthetic_mpes_data_generation_II (from symmetry).ipynb  tf2_comparison.ipynb  tf2_memory_limit.ipynb
examples/scripts/: Tuning_params_WSe2_HSL.json  Tuning_params_WSe2_K.json  WSe2_HSL_recon.py  WSe2_HSL_recon_benchmark.sh  WSe2_K_recon.py  WSe2_K_recon_benchmark.sh
figures/: Fig1_Data_preprocessing.ipynb  Fig2_SFig5_Four_DFTs_Reconstruction.ipynb  Fig2_Theory_vs_Reconstruction.ipynb  Fig3_Approximations_to_reconstruction.ipynb  Fig3_HexagonalZernike.ipynb  Fig5_K_and_Mprime.ipynb  README.md  SFig14_Approximation_along_high-symmetry_lines.ipynb  SFig4_Hyperparameter_tuning.ipynb  SFig6_Tests_on_synthetic_3D_data.ipynb  SFig9_Reconstruction_with_different_theories.ipynb  SFig9_Synthetic_data_and_initial_conditions.ipynb
figures/.ipynb_checkpoints/: Fig1_Data_preprocessing-checkpoint.ipynb  Fig2_SFig5_Four_DFTs_Reconstruction-checkpoint.ipynb  Fig3_HexagonalZernike-checkpoint.ipynb  Fig3_SFig13_Similarity_matrix_and_basis_decomposition-checkpoint.ipynb  Fig5_K_and_Mprime-checkpoint.ipynb  SFig4_Hyperparameter_tuning-checkpoint.ipynb  SFig6_Tests_on_synthetic_2D_data-checkpoint.ipynb  SFig6_Tests_on_synthetic_3D_data-checkpoint.ipynb  SFig9_Reconstruction_with_different_theories-checkpoint.ipynb  SFig9_Reconstruction_with_scaled_theory-checkpoint.ipynb
figures/extra/: E01_Hexagonal_tiling.ipynb  E02_Brillouin_zoning.ipynb  E03_Band_path.ipynb
figures/recon/: R01_Example_reconstruction_wse2_3D_data.ipynb  R02_Example_reconstruction_synthetic_multiband_3D_data.ipynb
fuller/: __init__.py  generator.py  metrics.py  mrfRec.py  mrfRecold.py  reconstruction_mrf2d.py  utils.py
fuller_tf_v1/: __init__.py  generator.py  mrfRec.py  mrfRecold.py  reconstruction_mrf2d.py
