[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fuller"]

[tool.setuptools_scm]

[project]
name = "fuller"
dynamic = ["version"]
authors = [
    {name = "Vincent Stimper, R. Patrick Xian"},
]
description = "Integrated computational framework for electronic band structure reconstruction and parametrization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<2",
    "scipy",
    "matplotlib",
    "poppy",
    "natsort",
    "symmetrize",
    "tqdm",
    "silx",
    "tensorflow>=2",
    "protobuf",
]

[project.urls]
Homepage = "https://github.com/mpes-kit/fuller"

[project.optional-dependencies]
cuda = [
    "tensorflow[cuda]>=2",
]

examples = [
    "mpes",
    "ipywidgets",
]

[tool.pydocstyle]
convention = "google"

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "pragma: no cover",
]