[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fuller"]

[tool.setuptools_scm]

[project]
name = "fuller"
dynamic = ["version"]
authors = [
    {name = "Vincent Stimper, R. Patrick Xian"},
]
description = "Integrated computational framework for electronic band structure reconstruction and parametrization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<2",
    "scipy",
    "matplotlib",
    "poppy",
    "natsort",
    "symmetrize",
    "tqdm",
    "silx",
    "tensorflow>=2",
    "protobuf",
]

[project.urls]
Homepage = "https://github.com/mpes-kit/fuller"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.7",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
]

cuda = [
    "tensorflow[and-cuda]>=2",
]

examples = [
    "mpes",
    "ipywidgets",
]

[tool.pydocstyle]
convention = "google"

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "pragma: no cover",
]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
lint.select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "F841", # unused variable
    "F401", # unused imports
    "ARG", # unused arguments
]
lint.ignore = [
    "E701", # Multiple statements on one line (colon)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLR5501", # else-if-used
    "PLW2901", # redefined-loop-name
]
lint.fixable = ["ALL"]
line-length = 120 # change the default line length number or characters.

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
